--- a/exp.ipynb
+++ b/exp.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "LiF = MLMD.atom_io.loadfile(1,"data/XDATCAR")"
+    "LiF = MLMD.atom_io.loadfile(2)"
    ]
   },
   {
