--- a/exp.ipynb
+++ b/exp.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "LiF = MLMD.atom_io.loadfile(2)"
+    "LiF = MLMD.atom_io.loadfile(2,\"data/XDATCAR\")"
    ]
   },
   {
